# Advent-of-Code-2021

./: README.md  day_1.py  main.py  pyproject.toml
problems/: day_1.py
solutions/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_x template.py
