[tool.poetry]
name = "repl_python3_Advent-of-Code-2021"
version = "0.1.0"
description = ""
authors = ["KonstantinosGeo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
